--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
+<h5><a href='https://careers.jobscore.com/careers/idpeducationpty/jobs/privacy-specialist-dfEU9s9Ker6ARKaKiznY58'>Privacy Specialist #1136 job at IDP Education Ltd in Melbourne City, Victoria, Australia, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Melbourne Australia Melbourne Australia Melbourne</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce/apply?lever-origin=applied&lever-source[0]=BuiltInColorado'>Gloo - Information Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce/apply?lever-origin=applied&lever-source[0]=BuiltInColorado'>Gloo - Information Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Information Privacy Analyst. Boulder, CO. Administration. Full-time. Submit your 
 application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -76,7 +76,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n5U38Mwr'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n5U38Mwr'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -116,7 +116,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dlapiperus.referrals.selectminds.com/jobs/data-protection-privacy-and-security-associate-2506'>Data Protection, Privacy and Security Associate - DLA Piper Careers</a></h5> 
+<h5><a href='https://dlapiperus.referrals.selectminds.com/jobs/data-protection-privacy-and-security-associate-2506'>Data Protection, Privacy and Security Associate - DLA Piper Careers</a></h5> 
 <p><span class="badge badge-light">Washington, District of Columbia  San Francisco, California  Los Angeles, California  Atlanta, Georgia  Seattle, Washington  Philadelphia, Pennsylvania  Chicago, Illinois  Los Angeles, California  New York, New York</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
@@ -174,7 +174,7 @@ experience?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/brainly/jobs/1823245'>Job Application for Privacy Specialist at Brainly</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -198,11 +198,11 @@ trust?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1758397'>Job Application for Firefox Staff Privacy Engineer at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1758397'>Job Application for Firefox Staff Privacy Engineer at Mozilla</a></h5> 
 <p><span class="badge badge-light">Toronto Vancouver Canada Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1810105'>Job Application for Trust & Privacy Analyst at Mozilla</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1810105'>Job Application for Trust & Privacy Analyst at Mozilla</a></h5> 
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -218,7 +218,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/palantir/e269dfeb-f150-4826-a39e-05afa9d11da2'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -244,7 +244,7 @@ and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1826563?gh_src=DataPrivacyCareers'>Job Application for Sr. Differential Privacy Research Engineer at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Sr. Differential Privacy Research Engineer, Mozilla Corporation, Mountain View, 
 CA &amp; Sugar Land, TX: perform research into data obfuscation methods for?...</p>
@@ -330,7 +330,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-13</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8984'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
@@ -354,7 +354,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lyft/jobs/4286343002?gh_jid=4286343002'>Job Application for Privacy Analyst at Lyft</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lyft/jobs/4286343002?gh_jid=4286343002'>Job Application for Privacy Analyst at Lyft</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Privacy Analyst. at Lyft. San Francisco, CA and Seattle, WA. At Lyft, community is 
 what we are and it's what we do. It's what makes us different. To create the best?...</p>
@@ -374,7 +374,7 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-18</p>
 <hr/>
-<h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/global-privacy-counsel-supervising-associate-80841'>Global Privacy Counsel Supervising Associate - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
@@ -417,7 +417,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/netflix/267449eb-6bf6-4f01-8cb5-e22ed58d9edb'>Netflix - Technical Program Manager - Privacy Assurance and Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/267449eb-6bf6-4f01-8cb5-e22ed58d9edb'>Netflix - Technical Program Manager - Privacy Assurance and Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
