--- a/ux.html
+++ b/ux.html
@@ -41,6 +41,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/wehkamp/743999698452304-ux-copywriter'>wehkamp UX Copywriter | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698455776-praktikant-in-im-bereich-user-research-im-ux-team'>Bosch Group Praktikant*in im Bereich User Research im UX-Team | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/splunk/job/oSnrbfwB'>Splunk Careers - Principal UX Designer, Applications</a></h5> 
 <p><span class="badge badge-light">San Francisco, California  San Jose, California</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -119,7 +127,7 @@
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/19490-Senior-UX-Designer?source=twitter'>
       Senior UX Designer at Primer - San Francisco, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
@@ -133,7 +141,7 @@
 <p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oCgcbfwZ&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nKaznMw7'>Compuware Careers - Senior UX Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=oCgcbfwZ&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nKaznMw7'>Compuware Careers - Senior UX Engineer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -141,7 +149,7 @@
 <p><span class="badge badge-light">Brighton, England</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/coupa/4d12f2dc-2253-40d1-9aec-13ce7be9150b'>Coupa Software, Inc. - Senior UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coupa/4d12f2dc-2253-40d1-9aec-13ce7be9150b'>Coupa Software, Inc. - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -269,11 +277,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/hkEiYQdMaq/UX-Designer'>UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/hkEiYQdMaq/UX-Designer'>UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/uXz44E944S/UX-Researcher'>UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/uXz44E944S/UX-Researcher'>UX Researcher - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -323,7 +331,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/462089-senior-ux-designer'>Job @ JOIN Solutions (Berlin): Senior UX Designer | JOIN</a></h5> 
+<h5><a href='https://join.join.com/jobs/462089-senior-ux-designer'>Job @ JOIN Solutions (Berlin): Senior UX Designer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -343,7 +351,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=obZkafwo&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ni0AmMwv'>ServiceNow Careers - Lead UX Designer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  San Diego, California  Kirkland, Washington</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -363,7 +371,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698329505-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MerkleInc/743999698329505-ux-design-lead'>Merkle Inc. UX Design Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Minneapolis, MN</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -457,16 +465,6 @@
       UX Designer at Numbrs Personal Finance AG - Zurich, Switzerland - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
-      Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584253'>Stellenangebot: UX Designer (m/w/d) (Erkrath) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 
